fix(navbar): improve mobile hamburger menu visibility and layout
- Adjusted .navbar__wrapper display to improve behavior in mobile views.
- Enhanced styling for .navbar__hamburger and related components to ensure proper visibility and alignment on smaller screens.
- Refined media query logic for better responsive design under 750px width.

--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -73,7 +73,7 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 3rem;
+    top: 4.5rem;
     background-color: var(--bg-ligth);
     padding: 0.5rem 0.3rem;
     box-shadow: var(--bs-page);
